[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "Fetch PubMed papers with non-academic authors"
authors = ["Akash B N"]
readme = "README.md"
packages = [
    { include = "get_papers" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"
typer = "^0.16.0"
rich = "^14.0.0"
pandas = "^2.3.1"

[tool.poetry.scripts]
get-papers-list = "cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
